--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ img {
   text-align: center;
   height: 50%;
   width: 50%;
+  padding-left: 10px;
 }
 
 :root {
@@ -9,6 +10,12 @@ img {
 }
 
 
-li {
+.navlinks {
   display: inline;
+  padding: 25px;
+}
+
+
+a {
+  justify-content: space-between;
 }
