--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 img {
-  text-align: center;
-  height: 50%;
-  width: 50%;
-  padding-right: 125px;
+  position: relative;
+  right: 275px;
+  bottom: 60px;
+
+  height: 5%;
+  width: 5%;
 }
 
 :root {
@@ -20,3 +22,7 @@ aside {
   width: 20%;
 }
 
+aside > .pushdown {
+  position: relative;
+  top: 50px;
+} 
