--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
-img {
+.logo {
   position: relative;
-  right: 275px;
-  bottom: 60px;
-
+  bottom: 115px;
   height: 5%;
   width: 5%;
+  right: 275px;
 }
 
 html {
@@ -29,5 +28,20 @@ aside > .pushdown {
 
 header {
   background-color: white;
-  padding: 60px;
+  padding: 20px;
+  width: 120%;
+  height: 150%;
+  justify-content:center; 
+  position: relative;
+  right: 150px;
+  bottom: 20px;
 }
+
+.mainPhoto { 
+  position: relative;
+  justify-content: center;
+  top: 60px;
+  right: 25px;
+  width: 50%;
+  height: auto;
+  }
